<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu.LoadingActivity">

    <ImageView
        android:id="@+id/View_BackGround_Loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_back_loading"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/view_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/new_rocker"
        android:text="@string/text_copyright"
        android:textColor="#F8F8F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_quit"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_quit"
        style="@android:style/Widget.Button"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#852813A6"
        android:fontFamily="@font/new_rocker"
        android:text="@string/text_quit"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_option"
        style="@android:style/Widget.Button"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#852813A6"
        android:fontFamily="@font/new_rocker"
        android:text="@string/text_option"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_quit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_play"
        style="@android:style/Widget.Button"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#852813A6"
        android:fontFamily="@font/new_rocker"
        android:text="@string/text_play"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sandbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_sandbox"
        style="@android:style/Widget.Button"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#852813A6"
        android:fontFamily="@font/new_rocker"
        android:text="@string/text_sandbox"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/new_rocker"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199"
        tools:ignore="TextContrastCheck" />

</android.support.constraint.ConstraintLayout>

