<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0052"
    android:backgroundTint="#0B0052"
    tools:context=".Sandbox.SandboxActivity">

    <Spinner
        android:id="@+id/list_nb_lines"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:backgroundTint="#852813A6"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/text_list_nb_lines"
        android:dropDownSelector="@color/bluje"
        android:foregroundTint="#FFFFFF"
        android:textAlignment="center"
        android:popupBackground="@color/bluje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <Spinner
        android:id="@+id/list_nb_columns"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:backgroundTint="#852813A6"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/text_list_nb_column"
        android:dropDownSelector="@color/bluje"
        android:foregroundTint="#852813A6"
        android:textAlignment="center"
        android:popupBackground="@color/bluje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <GridView
        android:id="@+id/sandbox_gameBoard"
        android:layout_width="411dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <ImageButton
        android:id="@+id/button_sandbox_perso"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/text_perso"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/perso" />

    <ImageButton
        android:id="@+id/button_sandbox_mur"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/text_mur"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sandbox_sol"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mur" />

    <ImageButton
        android:id="@+id/button_sandbox_sol"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/text_sol"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sandbox_arrive"
        app:srcCompat="@drawable/sol" />

    <ImageButton
        android:id="@+id/button_sandbox_box"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/text_box"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sandbox_perso"
        app:srcCompat="@drawable/boite" />

    <ImageButton
        android:id="@+id/button_sandbox_arrive"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/text_arrive"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sandbox_box"
        app:srcCompat="@drawable/arrivee" />

    <Button
        android:id="@+id/save_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sandbox_arrive" />

    <Button
        android:id="@+id/deleteGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sandbox_arrive" />

    <EditText
        android:id="@+id/map_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Give me a name !"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

</android.support.constraint.ConstraintLayout>