<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0052"
    android:backgroundTint="#0B0052"
    android:drawingCacheQuality="high"
    android:importantForAccessibility="noHideDescendants"
    android:overScrollMode="never"
    tools:context=".Game.GameActivity">

    <ImageButton
        android:id="@+id/button_game_left"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text_left"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circled_left" />

    <ImageButton
        android:id="@+id/button_game_right"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text_right"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circled_right" />

    <ImageButton
        android:id="@+id/button_game_up"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text_up"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toTopOf="@+id/button_game_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circled_up" />

    <ImageButton
        android:id="@+id/button_game_down"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/text_down"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circled_down" />

    <GridView
        android:id="@+id/gameBoard"
        android:layout_width="wrap_content"
        android:layout_height="441dp"
        android:layout_marginTop="84dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_game_goback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/undelete" />

    <ImageButton
        android:id="@+id/button_game_undo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_game_reload"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/undo" />

    <ImageButton
        android:id="@+id/button_game_reload"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_game_goback"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/restart" />

</android.support.constraint.ConstraintLayout>
