<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF">

    <Button
        android:id="@+id/button_return"
        style="@android:style/Widget.Button"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:backgroundTint="#852813A6"
        android:fontFamily="@font/new_rocker"
        android:text="@string/text_return"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/background_end"
        app:layout_constraintEnd_toStartOf="@+id/button_next_level"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_title_end"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_next_level"
        style="@android:style/Widget.Button"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:backgroundTint="#852813A6"
        android:fontFamily="@font/new_rocker"
        android:text="@string/text_next"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/background_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_title_end"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/background_end"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="#7E8FE4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <View
        android:id="@+id/background_title_end"
        android:layout_width="412dp"
        android:layout_height="54dp"
        android:background="#3F51B5"
        app:layout_constraintBottom_toBottomOf="@+id/background_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_end"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/new_rocker"
        android:text="@string/text_well"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/background_title_end"
        app:layout_constraintEnd_toEndOf="@+id/background_title_end"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_end"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/replay_game_end"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/background_title_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/background_end"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/restart" />
</android.support.constraint.ConstraintLayout>